[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/map/ui/MapParameterUI.gd" type="Script" id=1]

[node name="ParameterUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 800.0
margin_bottom = 500.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 10.0
margin_right = 800.0
margin_bottom = 495.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 14.0

[node name="ParameterName" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 365.0
margin_right = 435.0
margin_bottom = 14.0
text = "Parameter:"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 800.0
margin_bottom = 32.0

[node name="ParameterValue" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 396.0
margin_right = 404.0
margin_bottom = 14.0
text = "0"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 800.0
margin_bottom = 52.0

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 56.0
margin_right = 74.0
margin_bottom = 80.0
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
